--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,11 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+
+        maven {
+            url "https://jitpack.io"
+        }
 
     }
     dependencies {
@@ -19,7 +23,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
